--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "health tracker app with react frontend",
   "main": "client/main.jsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devserve": "webpack-dev-server  --hot --inline -d --config webpack.config.js --content-base public/ --progress --colors"
   },
   "author": "",
   "license": "ISC",
-  "scripts": {
-    "devserve": "webpack-dev-server -d --config webpack.config.js --content-base public/ --progress --colors"
-  },
   "dependencies": {
     "fbjs": "^0.4.0",
     "history": "^1.13.0",
@@ -22,11 +19,14 @@
     "reqwest": "^1.1.5"
   },
   "devDependencies": {
-    "style-loader": "^0.8.3",
+    "autoprefixer-loader": "^3.1.0",
     "babel-core": "^5.8.33",
     "babel-loader": "^5.3.3",
     "css-loader": "^0.9.1",
     "react-addons-test-utils": "~0.14.0",
+    "react-bootstrap": "^0.27.3",
+    "react-hot-loader": "^1.3.0",
+    "style-loader": "^0.8.3",
     "webpack": "^1.6.0",
     "webpack-dev-server": "^1.8.0"
   }
