--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "health tracker app with react frontend",
   "main": "client/main.jsx",
   "scripts": {
-    "devserve": "webpack-dev-server  --hot --inline -d --config webpack.config.js --content-base public/ --progress --colors"
+    "devserve": "webpack-dev-server  --hot --inline -d --config webpack.dev.config.js --content-base public/ --progress --colors"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "react-addons-test-utils": "~0.14.0",
     "react-bootstrap": "^0.27.3",
     "react-hot-loader": "^1.3.0",
+    "reqwest": "^1.1.6",
     "style-loader": "^0.8.3",
     "webpack": "^1.6.0",
     "webpack-dev-server": "^1.8.0"
