--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cuid": "^1.3.8",
+    "d3": "^3.5.8",
     "fbjs": "^0.4.0",
     "history": "^1.13.0",
     "jsuri": "^1.3.0",
     "jsx-loader": "^0.12.2",
+    "lodash": "^3.10.1",
     "react": "~0.14.2",
     "react-dom": "~0.14.2",
     "react-router": "~1.0.0-rc3",
